// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <ResourceListing /> renders correctly 1`] = `
<article
  class="ResourceListing"
>
  <a
    href="url"
    rel="noopener"
    target="_blank"
  >
    <figure
      class="Image ResourceListing-image isLoading"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader-animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
    <div
      class="ResourceListing-details"
    >
      <h3>
        title
      </h3>
      <p>
        description
      </p>
    </div>
  </a>
</article>
`;

exports[`[presentation] <ResourceListing /> updates \`isImageLoaded\` state when image has previously been loaded 1`] = `
<article
  class="ResourceListing isRendered"
>
  <a
    href="url"
    rel="noopener"
    target="_blank"
  >
    <figure
      class="Image ResourceListing-image isRendered"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
      </div>
    </figure>
    <div
      class="ResourceListing-details"
    >
      <h3>
        title
      </h3>
      <p>
        description
      </p>
    </div>
  </a>
</article>
`;

exports[`[presentation] <ResourceListing /> updates \`isRendered\` state after image has loaded 1`] = `
<article
  class="ResourceListing isRendered"
>
  <a
    href="url"
    rel="noopener"
    target="_blank"
  >
    <figure
      class="Image ResourceListing-image isRendered"
    >
      <div
        class="Image-wrapper"
      >
        <img
          alt="title"
          src="imageUrl"
        />
      </div>
    </figure>
    <div
      class="ResourceListing-details"
    >
      <h3>
        title
      </h3>
      <p>
        description
      </p>
    </div>
  </a>
</article>
`;
